--- a/src/main/public/apiclient/widget-login.html
+++ b/src/main/public/apiclient/widget-login.html
@@ -21,21 +21,7 @@
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label col-sm-2" for="email">Nombre:</label>
-        <div class="col-sm-10">
-            <input type="text" class="form-control" name="nombre"
-                   placeholder="María" id="nombre"/>
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-sm-2" for="email">Apellidos:</label>
-        <div class="col-sm-10">
-            <input type="text" class="form-control" name="apellidos"
-                   placeholder="Martínez Prieto" id="apellidos"/>
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-sm-2" for="password">Password:</label>
+        <label class="control-label col-sm-2" for="password">Contraseña:</label>
         <div class="col-sm-10">
             <input type="password" class="form-control" name="password"
                    placeholder="contraseña" id="password"/>
@@ -55,16 +41,14 @@
             type: "POST",
             data: {
                 email: $("#email").val(),
-                nombre: $("#nombre").val(),
-                apellidos: $("#apellidos").val(),
-                password: $("#password").val()
+                nombre: $("#password").val()
             },
             dataType: "json",
             success: function success(response) {
                 console.log(response.token); //Prueba
                 token = response.token;
                 Cookies.set('token', response.token);
-                $("#main-container").load("widget-posts.html");
+                // $("#main-container").load("widget-posts.html");
             },
             error: function (error){
                 Cookies.remove('token');
