--- a/src/main/public/apiclient/widget-login.html
+++ b/src/main/public/apiclient/widget-login.html
@@ -41,14 +41,14 @@
             type: "POST",
             data: {
                 email: $("#email").val(),
-                nombre: $("#password").val()
+                password: $("#password").val()
             },
             dataType: "json",
             success: function success(response) {
                 console.log(response.token); //Prueba
                 token = response.token;
                 Cookies.set('token', response.token);
-                // $("#main-container").load("widget-posts.html");
+                $("#main-container").load("widget-friends.html");
             },
             error: function (error){
                 Cookies.remove('token');
