Clase de Tests conectada a Mongodb

--- a/src/main/public/apiclient/client.html
+++ b/src/main/public/apiclient/client.html
@@ -27,6 +27,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right" id="barra-menu-derecha">
                 <!-- Opciones de menú aqui -->
+                <li><a onclick=widgetFriends()>Amigos</a></li>
             </ul>
         </div>
     </div>
