--- a/src/main/public/apiclient/widget-detail.html
+++ b/src/main/public/apiclient/widget-detail.html
@@ -1,9 +1,9 @@
 <div id="widget-detalles">
     <div class="form-group">
-        <label class="control-label col-sm-2" for="title">Emisor:</label>
+        <label class="control-label col-sm-2" for="emisor"></label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" name="title"
-                   placeholder="Título de la canción" id="title" readonly/>
+            <input type="text" class="form-control" name="emisor"
+                   placeholder="Título de la canción" id="emisor" readonly/>
         </div>
     </div>
     <div class="form-group">
@@ -20,11 +20,10 @@
                    placeholder="2.50" id="price" readonly/>
         </div>
     </div>
-    <button onclick="widgetSongs()" class="btn">Volver</button>
 </div>
 <script>
     $.ajax({
-        url: URLbase + "/songs/" + selectedSongId,
+        url: URLbase + "/messages/" + selectedMessageId,
         type: "GET",
         data: {},
         dataType: 'json',
@@ -32,7 +31,7 @@
             "token": token
         },
         success: function (response) {
-            $("#title").val(response.song.title);
+            $("#emisor").val(response.message.emisor);
             $("#kind").val(response.song.kind);
             $("#price").val(response.song.price);
         },
