--- a/src/main/public/apiclient/client.html
+++ b/src/main/public/apiclient/client.html
@@ -25,10 +25,6 @@
             <ul class="nav navbar-nav" id="barra-menu">
                 <li><a onclick=widgetFriends()>Chats</a></li>
             </ul>
-            <ul class="nav navbar-nav navbar-right" id="barra-menu-derecha">
-                <!-- Opciones de menú aqui -->
-                <li><a onclick=widgetFriends()>Chats</a></li>
-            </ul>
         </div>
     </div>
 </nav>
@@ -48,7 +44,7 @@
             $("#main-container").load("widget-login.html");
         }
         if (w == "chats") {
-            $("#main-container").load("widget-posts.html");
+            $("#main-container").load("widget-friends.html");
         }
     } else {
         $("#main-container").load("widget-friends.html");
