--- a/src/main/public/apiclient/widget-add.html
+++ b/src/main/public/apiclient/widget-add.html
@@ -1,38 +1,38 @@
 <div id="widget-agregar">
     <div class="form-group">
-        <label class="control-label col-sm-2" for="title-add">Título:</label>
+        <label class="control-label col-sm-2" for="receptor-add">Email del receptor:</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" name="title-add"
-                   placeholder="Título del post" id="title-add"/>
+            <input type="text" class="form-control" name="receptor-add"
+                   placeholder="Receptor del mensaje" id="receptor-add"/>
         </div>
     </div>
     <div class="form-group">
         <label class="control-label col-sm-2" for="text-add">Texto:</label>
         <div class="col-sm-10">
             <input type="text" class="form-control" name="text-add"
-                   placeholder="Texto del post" id="text-add"/>
+                   placeholder="Texto del mensaje" id="text-add"/>
         </div>
     </div>
     <div class="col-sm-offset-2 col-sm-10">
         <button type="button" class="btn btn-primary" id="boton-add"
-                onclick="widgetAddPost()">Nuevo post
+                onclick="widgetAddMessage()">Nuevo mensaje
         </button>
     </div>
 </div>
 <script>
-    function widgetAddPost( ) {
+    function widgetAddMessage( ) {
         $.ajax({
-            url: URLbase + "/posts",
+            url: URLbase + "/messages/add",
             type: "POST",
             data: {
-                title: $("#title-add").val(),
-                text: $("#text-add").val()
+                receptor: $("#receptor-add").val(),
+                texto: $("#text-add").val()
             },
             dataType: 'json',
             headers: {"token": token},
             success: function (response) {
-                console.log(response); // <-- Prueba
-                $("#main-container").load("widget-posts.html");
+
+                $("#main-container").load("widget-friends.html");
             },
             error: function (error) {
                 $("#main-container").load("widget-login.html");
