--- a/src/main/public/apiclient/widget-friends.html
+++ b/src/main/public/apiclient/widget-friends.html
@@ -14,6 +14,7 @@
     var friends;
     var messages;
     var selectedFriendId;
+
     // var interval = 1000;  // 1000 = 1 second
 
     function loadFriends() {
@@ -35,8 +36,7 @@
             }
         });
         // ordenar por fecha del último mensaje (de mayor a menor)
-        friends.sort(function () {
-        });
+
     }
 
     // setTimeout(loadFriends, interval);
@@ -45,29 +45,19 @@
 
         $("#friendsTableBody").empty(); // Vaciar la tabla
         for (let i = 0; i < friends.length; i++) {
+            getMessages(friends[i]._id);
             $("#friendsTableBody").append(
                 "<tr id=" + friends[i].nombre + ">" +
                 "<td>" + friends[i].nombre + "</td>" +
-                "<td>" + friends[i].apellidos + "</td>"+
-
-                "</tr>")
-            /*var lastMessage = getLastMessage(friends[i].email);*/
-            /*
-            getMessages(friends[i].email);
-            // let text = $val(messages[messages.length -1].texto);
-            $("#friendsTableBody").append(
-                "<tr id=" + friends[i].nombre + ">" +
                 "<td>" + friends[i].apellidos + "</td>" +
-                "<td><a onclick=messagesDetail('" + friends[i]._id + "')></a><br>" + messages[messages.length -1].texto + "</td>" +
-                "</tr>");
-            */
-
+                "<td><a onclick=messagesDetail('" + friends[i]._id + "')></a><br>" + messages[messages.length - 1].texto + "</td>" +
+                "</tr>")
         }
     }
 
-    function getMessages(email) {
+    function getMessages(id) {
         $.ajax({
-            url: URLbase + "/user/messages/" + email,
+            url: URLbase + "/user/messages/" + id,
             type: "GET",
             data: {},
             dataType: 'json',
@@ -81,11 +71,11 @@
             }
         });
         // ordenar por fecha del último mensaje (de menor a mayor)
-        messages.sort(function (a, b) {
-            if (a.time > b.time) return 1;
-            if (a.time < b.time) return -1;
-            return 0;
-        });
+        // messages.sort(function (a, b) {
+        //     if (a.time > b.time) return 1;
+        //     if (a.time < b.time) return -1;
+        //     return 0;
+        // });
     }
 
     $('#filter-by-name').on('input', function (e) {
@@ -99,6 +89,6 @@
         selectedFriendId = _id;
         $("#main-container").load("widget-messages.html");
     }
-    */
+
     loadFriends();
 </script>
