--- a/src/main/public/apiclient/widget-friends.html
+++ b/src/main/public/apiclient/widget-friends.html
@@ -44,27 +44,31 @@
     function updateFriendsTable(friends) {
 
         $("#friendsTableBody").empty(); // Vaciar la tabla
-        for (let i = 0; i < friends.length; i++) {
-            getMessages(friends[i]._id);
+        friends.forEach(friend=>{
+            getMessages(friend._id)
+            console.log(messages)
+
             $("#friendsTableBody").append(
-                "<tr id=" + friends[i].nombre + ">" +
-                "<td>" + friends[i].nombre + "</td>" +
-                "<td>" + friends[i].apellidos + "</td>" +
-                "<td><a onclick=messagesDetail('" + friends[i]._id + "')></a><br>" + messages[messages.length - 1].texto + "</td>" +
+                "<tr id=" + friend.nombre + ">" +
+                "<td>" + friend.nombre + "</td>" +
+                "<td>" + friend.apellidos + "</td>" +
+                "<td><a onclick=messagesDetail('" + friend._id + "')></a><br>" + messages[messages.length - 1].texto + "</td>" +
                 "</tr>")
-        }
+            }
+        )
+
     }
 
     function getMessages(id) {
         $.ajax({
-            url: URLbase + "/user/messages/" + id,
+            url: URLbase + "/user/" + id+"/messages",
             type: "GET",
             data: {},
             dataType: 'json',
             headers: {"token": token},
             success: function (response) {
                 messages = response.messages;
-                updateFriendsTable(friends);
+
             },
             error: function (error) {
                 $("#main-container").load("widget-login.html");
