--- a/src/main/public/apiclient/widget-messages.html
+++ b/src/main/public/apiclient/widget-messages.html
@@ -2,8 +2,21 @@
     <!-- Hacerlo cada segundo automáticamente-->
     <button class="btn" onclick="loadMessages()">Actualizar</button>
     <section id="chat">
-
     </section>
+    <div id="widget-agregar">
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="text-add">Texto:</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" name="text-add"
+                       placeholder="Texto del mensaje" id="text-add"/>
+            </div>
+        </div>
+        <div class="col-sm-offset-2 col-sm-10">
+            <button type="button" class="btn btn-primary" id="boton-add"
+                    onclick="widgetAddMessage()">Nuevo mensaje
+            </button>
+        </div>
+    </div>
 </div>
 <script>
     var messages;
@@ -32,41 +45,39 @@
 
     function updateMessagesTable(messages) {
         $("#chat").empty(); // Vaciar la sección
-        for (let i = 0; i < messages.length; i++) {
+        messages.forEach(message =>{
+            let fecha = message.fecha.format('dd-m-yy');
+            let leido;
+            if(message.leido){
+                leido = "Leído"
+            } else {
+                leido = "No leído"
+            }
             $("#chat").append(
-                "<div id=" + messages[i]._id + ">" +
-                "<td>" + messages[i].title + "</td>" +
-                "<td>" + messages[i].texto + "</td>" +
-                "<td>" + messages[i].fecha + "</td>" +
-                "<td>" +
-                "<a onclick=songDetail('" + messages[i]._id + "')>Detalles</a><br>" +
-                "<a onclick=songDelete('" + messages[i]._id + "')>Eliminar</a>" +
-                "</td>" +
-                "</div>");
-            // Mucho cuidado con las comillas del eliminarCancion
-            //la id tiene que ir entre comillas ' '
-        }
+                "<div id=" + message._id + ">" +
+                "<div>" + message.emisor + ": " + message.texto + ' ' + fecha + "</div>" +
+                "<div>" + leido + "</div>" +
+                "</div><br>");
+        })
     }
 
-    function songDelete(_id) {
+    function widgetAddMessage( ) {
         $.ajax({
-            url: URLbase + "/messages/" + _id,
-            type: "DELETE",
-            data: {},
+            url: URLbase + "/messages/add/" + selectedFriendId,
+            type: "POST",
+            data: {
+                receptor: $("#receptor-add").val(),
+                texto: $("#text-add").val()
+            },
             dataType: 'json',
             headers: {"token": token},
             success: function (response) {
-                console.log("Canción eliminada: " + _id);
-                $("#" + _id).remove(); // eliminar el <tr> del post
+                $("#main-container").load("widget-friends.html");
             },
             error: function (error) {
                 $("#main-container").load("widget-login.html");
             }
         });
-    }
-
-    function widgetAddMessage() {
-        $("#main-container").load("widget-add.html");
     }
 
     loadMessages();
