--- a/src/main/public/apiclient/widget-friends.html
+++ b/src/main/public/apiclient/widget-friends.html
@@ -58,7 +58,7 @@
                         "<tr id=" + aux.nombre + ">" +
                         "<td>" + aux.nombre + "</td>" +
                         "<td>" + aux.apellidos + "</td>" +
-                        "<td><a onclick=messagesDetail('" + aux._id + "')>ver </a>" + messages[0].texto + "</td>" +
+                        "<td><a onclick=messagesDetail('" + aux._id + "')>Ver<br> </a>" + messages[0].texto + "</td>" +
                         "</tr>");
                 },
                 error: function (error) {
